servicemesh/front-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: testjin-front-gateway
  namespace: testjin
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - testjin30.apps.poc.amc
    port:
      name: http
      number: 80
      protocol: HTTP
