servicemesh/add-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: add-vs
  namespace: testjin
spec:
  hosts:
  - add.testjin.svc.cluster.local
  http:
  - match:
    - uri:
        exact: /
    - uri:
        prefix: /add_user
    route:
    - destination:
        host: add.testjin.svc.cluster.local
        port:
          number: 80
