servicemesh/delete-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: delete-vs
  namespace: "smh"
spec:
  hosts:
  - delete.smh.svc.cluster.local
  http:
  - match:
    - uri:
        exact: /
    - uri:
        prefix: /delete_user
    route:
    - destination:
        host: delete.smh.svc.cluster.local
        port:
          number: 80
