servicemesh/front-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: front-vs
  namespace: smh
spec:
  gateways:
  - smh-front-gateway
  hosts:
  - front.apps.cluster3.mtp.local
  http:
  - match:
    - uri:
        exact: /
    - uri:
        prefix: /add_user
    - uri:
        prefix: /delete_user
    route:
    - destination:
        host: front.smh.svc.cluster.local
        subset: v1
        port:
          number: 80
      weight: 50
    - destination:
        host: front.smh.svc.cluster.local
        subset: v2
        port:
          number: 80
      weight: 50
