servicemesh/get-dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: get-dr
  namespace: smh
spec:
  host: get.smh.svc.cluster.local 
  subsets:
  - labels:
      app: get
    name: v1
  - labels:
      app: get
    name: v2
