servicemesh/get-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: get-vs
  namespace: smh
spec:
  hosts:
  - get.smh.svc.cluster.local
  http:
  - match:
    - uri:
        exact: /
    - uri:
        prefix: /get_users
    route:
    - destination:
        host: get.smh.svc.cluster.local
        subset: v1
        port:
          number: 80
      weight: 50
    - destination:
        host: get.smh.svc.cluster.local
        subset: v2
        port:
          number: 80
      weight: 50
